--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Main</title>
+  <link rel="stylesheet" href="index.css">
   <script src="elm.js"></script>
 </head>
 
