Added meta tags and icons for apple devices

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,13 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Main</title>
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" >
+  <link rel="apple-touch-icon" sizes="76x76" href="./apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+  <meta name="theme-color" content="#ffffff">
+  <title>Elm Games</title>
   <link rel="manifest" href="./manifest.webmanifest">
 </head>
 
