--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta name="theme-color" content="#ffffff">
   <title>Elm Games</title>
   <link rel="manifest" href="./manifest.webmanifest">
-  <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet'>
+  <link rel="stylesheet" href="/node_modules/dejavu-sans/css/dejavu-sans.css">
 </head>
 
 <body>
