Change font to support mobile browsers (#13)
* Card font changed to Droid Sans (#12)

* Card font changed to DejaVu Sans (#14)

* Fix incorrect import

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <meta name="theme-color" content="#ffffff">
   <title>Elm Games</title>
   <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="stylesheet" href="../node_modules/dejavu-sans/css/dejavu-sans.css">
 </head>
 
 <body>
