Colour changes and styled for mobile

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#ffffff">
   <title>Elm Games</title>
   <link rel="manifest" href="./manifest.webmanifest">
-  <link rel="stylesheet" href="../node_modules/dejavu-sans/css/dejavu-sans.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
 </head>
 
 <body>
